--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
   "name": "ga-scroll-tracking-plugin",
   "version": "1.0.0",
+  "private": true,
   "description": "A lightweight Google Analytics scroll tracking plugin utilizing the GA plugin API.",
-  "main": "index.js",
+  "main": "./lib/scroll-depth-tracker.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "start": "gulp watch",
+    "test": "gulp test",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/serpsapp/GAScrollTrackingPlugin.git"
   },
-  "author": "@serpsapp",
+  "author": {
+    "name": "SERPs.com",
+    "url": "https://serps.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/serpsapp/GAScrollTrackingPlugin/issues"
   },
   "homepage": "https://github.com/serpsapp/GAScrollTrackingPlugin#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "mocha": "^2.4.5",
-    "mocha-jsdom": "^1.1.0"
-  }
+    "browser-sync": "^2.12.5",
+    "browserify": "^13.0.0",
+    "connect": "^3.4.0",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "gulp-webdriver": "^2.0.1",
+    "lodash": "^4.8.2",
+    "mocha": "^2.3.4",
+    "ngrok": "^2.1.6",
+    "selenium-server-standalone-jar": "^2.48.2",
+    "selenium-standalone": "^5.1.0",
+    "serve-static": "^1.10.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "wdio-mocha-framework": "^0.2.12",
+    "wdio-sauce-service": "^0.2.2",
+    "webdriverio": "^4.0.5"
+  },
+  "dependencies": {}
 }
