--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-eslint": "^2.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
